force-app/main/default/objects/Pokemon__c.object
<CustomObject>
    <fields>
        <fullName>Type_1__c</fullName>
        <label>Type 1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_2__c</fullName>
        <label>Type 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pokeId__c</fullName>
        <label>pokeId</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Pokemon</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pokemon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pokemon</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>