force-app/main/default/objects/Pokemon__c/fields/Back_Sprite__c.field-meta.xml
<CustomField>
    <fullName>Back_Sprite__c</fullName>
    <label>Back_Sprite</label>
    <type>Url</type>
</CustomField>