force-app/main/default/objects/Pokemon__c/fields/Front_Sprite__c.field-meta.xml
<CustomField>
    <fullName>Front_Sprite__c</fullName>
    <label>Front_Sprite</label>
    <type>Url</type>
</CustomField>